--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=5000
+MONGODB_URI=mongodb+srv://dharun:marvel74@cluster0.mnverxm.mongodb.net/golang_db?retryWrites=true&w=majority&appName=Cluster0
